# denayer-robocup-12-13-a

./: CodeGuidelines.md  Configdoxy  DoxygenDocumenting.md  ProjectHome.md  ProjectOverview.md
C++-Examples/RobocupExample/: Point.cpp  Robot.cpp  Robot.h
Documentation/html/: class_ball.html  class_data_circle.html  class_keeper.html  class_kicker-members.html  class_kicker.html  class_log.html  class_low_level-members.html  class_low_level.html  class_robot.html  class_serial-members.html  class_staticlog-members.html  class_strategy.html  class_thread-members.html  class_thread.html  class_vision-members.html  class_vision_ball-members.html  class_vision_data-members.html  class_vision_data.html  class_vision_field.html  class_vision_robot.html  class_wificlient-members.html  class_wificlient.html  class_wifiserver.html  dir_4c9b020941bb6393ce3ff1f1e7c4dbad.html  dir_7c6616646cab80e169aff7c5cdfa4003.html  dir_dededbae6c0789e86cb8f6db03f831d0.html  dir_e4aeb40514c1b8c6e72270229d5e15c4.html  files.html  functions_func.html  (+18 more)
Presentation/: C++12-13.pptx
Source/: makefile
Source/robot/low_level/: .fuse_hidden000000d400000001  .fuse_hidden000000d700000002  .fuse_hidden000000dc00000003  .fuse_hidden000000e300000004  CMakeLists.txt  Serial.h  keeper.cpp  low_level.cpp  low_level.h  main.cpp  makefile  serial.cpp  serial.h
Source/robot/unit_tests/ipc/: CMakeLists.txt  ipc_server_test.cpp
trunk/: EvaluationForm.txt  Thumbs.db
trunk/Source/robot/strategy/: CMakeLists.txt  Kicker.cpp  Kicker.h  keeper.cpp  keeper.h  kicker.cpp  kicker.h  main.cpp  robot.cpp  robot.h  strategy.cpp  strategy.h
trunk/Source/robot/strategy/tests/: low_level.h
trunk/Source/robot/wifi/: CMakeLists.txt  game.pb.cc  game.pb.h  game.proto  log.txt  main.cpp  makefile  test_client.cc  thread.cc  total.proto  wifi.cpp  wifi.h  wificlient.cc  wificlient.h  wifiserver.h
trunk/Source/robot/wifi/rommel/: lib_crc.h  makefile  test_server.cc  thread.h  wifiserver.h
wiki/: CodeGuidelines.wiki  DoxygenDocumenting.wiki  ImageProcessingIndex.wiki  LowLevelIndex.wiki  PageName.wiki  ProjectOverview.wiki  StrategyIndex.wiki  TableOfContents.wiki  Test1.wiki  WifiIndex.wiki
(+275 files in other folders)
